--- a/BookClub/Views/Post/GetPost.cshtml
+++ b/BookClub/Views/Post/GetPost.cshtml
@@ -61,7 +61,7 @@
         <span>@reply.Created</span>
     </div>
 
-    <div class="col-md-9 replyCotentContainer">
+    <div class="col-md-9 replyContentContainer">
         <div class="replypostContent">
             @Html.Raw(reply.Content)
         </div>
