--- a/BookClub/Views/Shared/_Layout.cshtml
+++ b/BookClub/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿
+﻿@using Microsoft.AspNet.Identity.Owin
+@using Microsoft.AspNet.Identity
+@using Microsoft.AspNet.Identity.EntityFramework
+
+@{ var manager = Context.GetOwinContext().GetUserManager<ApplicationUserManager>();
+    var user = manager.FindById(User.Identity.GetUserId());}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -27,18 +33,26 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" style="font-weight: bold;">
                     <li>@Html.ActionLink("Book Catalogue", "GetAllBooks", "Book")</li>
-                    
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                           <li> @Html.ActionLink("Discussions", "GetAllDiscussions", "Discussion")</li>
-                           <li>@Html.ActionLink("Recent Posts", "Index", "Community")</li>
+                            <li> @Html.ActionLink("Discussions", "GetAllDiscussions", "Discussion")</li>
+                            <li>@Html.ActionLink("Recent Posts", "Index", "Community")</li>
                         </ul>
 
                     <li>@Html.ActionLink("MyChallenges", "GetChallenges", "Challenge")</li>
+
+                  
+                    <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Profile<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li> @Html.ActionLink("My Profile", "Details", "Profile")
+                            </ul>
+
                 </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
+                        @Html.Partial("_LoginPartial")
+</div>
         </div>
     </div>
     <div class="container body-content">
