--- a/BookClub/Views/Book/GetBookId.cshtml
+++ b/BookClub/Views/Book/GetBookId.cshtml
@@ -1,4 +1,5 @@
 ﻿@model BookClub.Data.Models.Book
+   
 
 <div class="container">
     <div class="page-header clearfix detailHeading">
@@ -7,13 +8,13 @@
 </div>
 
 <div class="jumbotron">
-   <div class="row">
+    <div class="row">
         <div class="col-md-4">
             <div>
                 <img class="detailImage" src="@Model.Image" />
             </div>
         </div>
-        
+
         <div class="col-md-4">
             <p id="bookTitle">@Model.Title</p>
             @*<p id="bookAuthor">@Model.Author.Name</p>*@
@@ -39,21 +40,19 @@
                 </tr>
             </table>
         </div>
-        
+
         <div class="col-md-8">
             <p id="bookBlurb">@Model.Blurb</p>
         </div>
+        View 
+        @Html.ActionLink("discussions", "GetPostsByDiscussion", new { id = Model.Id, Controller = "Discussion" })
+        about this book
     </div>
-    
-    
-        
-        
-           
-        
 
-    @Html.ActionLink("See Reviews", "GetReviewByBook",
-              new { id=Model.Id , Controller="Review" })
 
+    <button class="btn btn-warning" onclick="location.href='@Url.Action("GetReviewByBook", "Review", new { id = Model.Id })';return false;">See Reviews</button>
+
+    @*@Html.ActionLink("See Reviews", "GetReviewByBook", new { id = Model.Id, Controller = "Review" })*@
 
     @* <p>
                             @Html.ActionLink("Add Review", "AddReview",
@@ -73,8 +72,5 @@
                     </td>
                 </tr>
             }*@
-
-
-    @Html.ActionLink("See Discussions", "GetPostsByDiscussion",
-              new { id = Model.Id , Controller="Discussion" })
+    
 </div>
