--- a/BookClub/Views/Challenge/GetChallenges.cshtml
+++ b/BookClub/Views/Challenge/GetChallenges.cshtml
@@ -21,7 +21,8 @@
     {
         <div class="form-group">
             @Html.AntiForgeryToken()
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <h3>Add Challenge</h3>
+            @*@Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div>
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
