--- a/BookClub/Views/Post/GetPost.cshtml
+++ b/BookClub/Views/Post/GetPost.cshtml
@@ -37,21 +37,25 @@
 <div class="row" id="replyDivide"></div>
 @if(User.Identity.IsAuthenticated)
 {
+    @*using (Html.BeginForm("AddReply", "Admin", FormMethod.Post))
+    {
+        <input type="text" name="Reply" style="width:100%; height:100px; font-size:10px; margin-top:10px;"/>
+        <input type="submit" value="Reply to Post" class="btn btn-success" style="margin-top:10px;"/>
+    }*@
 <div class="row" id="postReplyRow">
     <span>
         @Html.ActionLink("Post reply", "AddReply_",
 
-     new { id = Model.Id, Controller = "Admin" })
+  new { id = Model.Id, Controller = "Admin" })
     </span>
 
 </div>
 } 
-    <br/>
-   
+    
 @if (Model.Replies.Any())
-{
-    foreach (var reply in Model.Replies)
     {
+        foreach (var reply in Model.Replies)
+        {
 <div class="row" id="replyContent">
     <div class="col-md-3 replyAuthorContainer">
         
