--- a/BookClub/Views/Review/_ReviewContentPartial.cshtml
+++ b/BookClub/Views/Review/_ReviewContentPartial.cshtml
@@ -1,19 +1,19 @@
 ﻿@model BookClub.Models.Review.ReviewViewModel
 
+<div class="reviewContent">
 <table style="width: 100%; border: 1px solid black">
     <tr>
         <td>
-           
             @Model.DateCreated  @*.ToString("dd-MM-yyyy HH:mm")*@
         </td>
     </tr>
     <tr>
-        <td>
-            @Model.ReviewContent
+        <td class="reviewComment">
+                 @Model.ReviewContent
         </td>
     </tr>
     <tr>
-        <td>
+        <td class="reviewAuthorName">
             @Model.AuthorName
         </td>
     </tr>
@@ -24,13 +24,14 @@
         <td>
             @for (int i = 0; i < @Model.Rating; i++)
             {
-                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star" id="partialReviewStar"></span>
             }
             @for (int i = @Model.Rating; i < 5; i++)
             {
-                <span class="glyphicon glyphicon-star-empty"></span>
+                <span class="glyphicon glyphicon-star-empty" id="partialReviewStar"></span>
             }
         </td>
     </tr>
 
 </table>
+</div>
