Gone through worshop files for UserAdmin Controller - not saving roles for a user when changed

--- a/BookClub/Views/Shared/_Layout.cshtml
+++ b/BookClub/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                                     
                                     @if (this.User.IsInRole("Admin"))
                                     {
-                                            <li>@Html.ActionLink("Get All Users", "Admin", "Movies")</li>
+                                            <li>@Html.ActionLink("View all users", "GetAllUsers", "UserAdmin")</li>
                                            
                                     }
                                     
