--- a/BookClub/Views/Discussion/GetPostsByDiscussion.cshtml
+++ b/BookClub/Views/Discussion/GetPostsByDiscussion.cshtml
@@ -22,7 +22,7 @@
             {
 
                 @*@Html.TextBox("SearchQuery")*@ 
-                <input type="text" name="submit" value="Search" placeholder="Search..." class="searchBar" onfocus="clearThis(this)" />
+                <input type="text" name="search" value="Search" placeholder="Search..." class="searchBar" onfocus="clearThis(this)" />
                 <button type="submit" class="btn btn-discussionSearch">
                 <i class="material-icons">search</i>
                 </button>
