--- a/BookClub/Views/Book/GetAllBooks.cshtml
+++ b/BookClub/Views/Book/GetAllBooks.cshtml
@@ -14,7 +14,6 @@
     </div>
 }
 
-
 @*<div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
             Filter By
@@ -55,37 +54,7 @@
             </td>
         </tr>
     }
-
-    else
-    {
-        foreach (var item in Model)
-        {
-            <tr>
-
-                <td>
-                    <img src="@Html.DisplayFor(modelItem => item.Image)" class="imageCell" />
-                </td>
-                <td>
-                    @Html.ActionLink(item.Title, "GetBookId",
-                        new { id = item.Id, Controller = "Book" })
-                </td>
-                <td>
-                    @Html.ActionLink(item.Author.Name, "GetAuthor",
-                       new { id = item.Id, Controller = "Author" })
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Genre.Name)
-                </td>
-                @*<td>
-                        @using (Html.BeginForm("AddBookToFavourites", "Favourites", new { id = item.Id }, FormMethod.Post))
-                        {
-                        <button type="submit"><i class="fab fa-gratipay fa-2x"></i></button>
-                        }
-                    </td>*@
-            </tr>
-        }
-    }
-
+    
             else
             {
                 foreach (var item in Model)
@@ -114,6 +83,8 @@
                         </td>*@
                     </tr>
                 }
+   
             }
+    </table>
 
 
